# pyrogram-test

./: README.md  example.json  main.py  pyproject.toml  requirements.txt
test_pyro/: bot.py  utils.py
